read-me and images add

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
           attractive offers today !
         </div>
       </div>
+      <!--add social media sign up options-->
       <form id="form">
         <div class="social">
           <div class="title">Get Started</div>
@@ -62,12 +63,14 @@
             type="text"
             name="username"
             id="username"
-            placeholder="Afreen"
+            placeholder="Enter name"
           />
           <i class="fas fa-exclamation-circle failure-icon"></i>
           <i class="far fa-check-circle success-icon"></i>
           <div class="error"></div>
         </div>
+        <!--Note: we are creating an .error class name.
+           We will inject the error message here using JavaScript.-->
 
         <!-- /** 
           * ! Email Input here
